--- a/saiyou/index.html
+++ b/saiyou/index.html
@@ -220,102 +220,102 @@
 
         <div id="footer">
             <center>
-                <table width="800">
-                    <tbody>
-                        <tr>
-                            <td>
-                                <h2>ようこそ!
-                                    <a href="../">アニメ制作会社エクラアニマル</a>
-                                </h2>
-                                <p>
-                                    <font size="2px">
-                                        参与制作
-                                    </font>
-                                </p>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-                <table width="800" border="1" cellspacing="0" cellpadding="0">
-                    <tbody>
-                        <tr>
-                            <th scope="col" width="200">
-                                <p>TVシリーズのアニメ制作</p>
-                            </th>
-                            <th scope="col" width="200">
-                                <p>自主制作アニメ</p>
-                            </th>
-                            <th scope="col" width="200">
-                                <p>イベント協力</p>
-                            </th>
-                            <th scope="col" width="200">
-                                <p>関連サイト</p>
-                            </th>
-                        </tr>
-                        <tr>
-                            <td>
-                                <p>
-                                    <font size="-2">
-                                        <a href="." target="new">＋シンカリオン</a>
-                                        <br>
-                                        <a href="../anime/mukashibanashi/" target="new">＋ふるさとめぐり日本の昔ばなし</a>
-                                    </font>
-                                </p>
-                            </td>
-                            <td>
-                                <p>
-                                    <font size="-2">
-                                        <a href="../katudou/index.html#kazenoyouni">＋風のように</a>
-                                        <br>
-                                        <a href="../katudou/index.html#daruma">＋だるまちゃんシリーズ</a>
-                                        <br>
-                                        <a href="../katudou/index.html#fuitin">＋フイチンさん</a>
-                                        <br>
-                                        <a href="../katudou/index.html#charadoku">＋キャラ丸くんとドク丸くん</a>
-                                        <br>
-                                        <a href="../katudou/index.html#kappa">＋かっぱのすりばち</a>
-                                        <br>
-                                        <a href="../katudou/index.html#kurumi">＋くるくるクルミちゃん</a>
-                                        <br>
-                                        <a href="../katudou/index.html#sakura">＋さくらとサクリン</a>
-                                    </font>
-                                </p>
-                            </td>
-                            <td>
-                                <p>
-                                    <font size="-2">＋人形劇フェスタin西東京
-                                        <br> ＋子育てフェスタ＠西東京
-                                        <br>
-                                        <a href="" target="new">＋西東京商工祭り</a>
-                                        <br>
-                                        <a href="" target="new">＋西東京市民祭り</a>
-                                        <br>
-                                        <a href="" target="new">＋西東京アースデイフェア</a>
-                                    </font>
-                                </p>
-                            </td>
-                            <td>
-                                <p>
-                                    <font size="-2">
-                                        <a href="" target="new">＋エクラアニマルネットショップ</a>
-                                        <br>
-                                        <a href="" target="new">＋E★アニマル日記【スタッフブログ】</a>
-                                        <br>
-                                        <a href="" target="new">＋キャラ丸くんとドク丸くん【Facebook】</a>
-                                        <br>
-                                        <a href="" target="new">＋キャラ丸くん【Twitter】</a>
-                                        <br>
-                                        <a href="" target="new">＋風のように【Twitter】</a>
-                                        <br>
-                                        <a href="" target="new">＋キャラ丸くんとドク丸くん4コマ漫画</a>
-                                        <br>
-                                        <a href="" target="new">＋ふらふら蟻【ラジオ番組】</a>
-                                    </font>
-                                </p>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
+                <!--<table width="800">-->
+                    <!--<tbody>-->
+                        <!--<tr>-->
+                            <!--<td>-->
+                                <!--<h2>ようこそ!-->
+                                    <!--<a href="../">アニメ制作会社エクラアニマル</a>-->
+                                <!--</h2>-->
+                                <!--<p>-->
+                                    <!--<font size="2px">-->
+                                        <!--参与制作-->
+                                    <!--</font>-->
+                                <!--</p>-->
+                            <!--</td>-->
+                        <!--</tr>-->
+                    <!--</tbody>-->
+                <!--</table>-->
+                <!--<table width="800" border="1" cellspacing="0" cellpadding="0">-->
+                    <!--<tbody>-->
+                        <!--<tr>-->
+                            <!--<th scope="col" width="200">-->
+                                <!--<p>TVシリーズのアニメ制作</p>-->
+                            <!--</th>-->
+                            <!--<th scope="col" width="200">-->
+                                <!--<p>自主制作アニメ</p>-->
+                            <!--</th>-->
+                            <!--<th scope="col" width="200">-->
+                                <!--<p>イベント協力</p>-->
+                            <!--</th>-->
+                            <!--<th scope="col" width="200">-->
+                                <!--<p>関連サイト</p>-->
+                            <!--</th>-->
+                        <!--</tr>-->
+                        <!--<tr>-->
+                            <!--<td>-->
+                                <!--<p>-->
+                                    <!--<font size="-2">-->
+                                        <!--<a href="." target="new">＋シンカリオン</a>-->
+                                        <!--<br>-->
+                                        <!--<a href="../anime/mukashibanashi/" target="new">＋ふるさとめぐり日本の昔ばなし</a>-->
+                                    <!--</font>-->
+                                <!--</p>-->
+                            <!--</td>-->
+                            <!--<td>-->
+                                <!--<p>-->
+                                    <!--<font size="-2">-->
+                                        <!--<a href="../katudou/index.html#kazenoyouni">＋風のように</a>-->
+                                        <!--<br>-->
+                                        <!--<a href="../katudou/index.html#daruma">＋だるまちゃんシリーズ</a>-->
+                                        <!--<br>-->
+                                        <!--<a href="../katudou/index.html#fuitin">＋フイチンさん</a>-->
+                                        <!--<br>-->
+                                        <!--<a href="../katudou/index.html#charadoku">＋キャラ丸くんとドク丸くん</a>-->
+                                        <!--<br>-->
+                                        <!--<a href="../katudou/index.html#kappa">＋かっぱのすりばち</a>-->
+                                        <!--<br>-->
+                                        <!--<a href="../katudou/index.html#kurumi">＋くるくるクルミちゃん</a>-->
+                                        <!--<br>-->
+                                        <!--<a href="../katudou/index.html#sakura">＋さくらとサクリン</a>-->
+                                    <!--</font>-->
+                                <!--</p>-->
+                            <!--</td>-->
+                            <!--<td>-->
+                                <!--<p>-->
+                                    <!--<font size="-2">＋人形劇フェスタin西東京-->
+                                        <!--<br> ＋子育てフェスタ＠西東京-->
+                                        <!--<br>-->
+                                        <!--<a href="" target="new">＋西東京商工祭り</a>-->
+                                        <!--<br>-->
+                                        <!--<a href="" target="new">＋西東京市民祭り</a>-->
+                                        <!--<br>-->
+                                        <!--<a href="" target="new">＋西東京アースデイフェア</a>-->
+                                    <!--</font>-->
+                                <!--</p>-->
+                            <!--</td>-->
+                            <!--<td>-->
+                                <!--<p>-->
+                                    <!--<font size="-2">-->
+                                        <!--<a href="" target="new">＋エクラアニマルネットショップ</a>-->
+                                        <!--<br>-->
+                                        <!--<a href="" target="new">＋E★アニマル日記【スタッフブログ】</a>-->
+                                        <!--<br>-->
+                                        <!--<a href="" target="new">＋キャラ丸くんとドク丸くん【Facebook】</a>-->
+                                        <!--<br>-->
+                                        <!--<a href="" target="new">＋キャラ丸くん【Twitter】</a>-->
+                                        <!--<br>-->
+                                        <!--<a href="" target="new">＋風のように【Twitter】</a>-->
+                                        <!--<br>-->
+                                        <!--<a href="" target="new">＋キャラ丸くんとドク丸くん4コマ漫画</a>-->
+                                        <!--<br>-->
+                                        <!--<a href="" target="new">＋ふらふら蟻【ラジオ番組】</a>-->
+                                    <!--</font>-->
+                                <!--</p>-->
+                            <!--</td>-->
+                        <!--</tr>-->
+                    <!--</tbody>-->
+                <!--</table>-->
                 <table width="800">
                     <tbody>
                         <tr> </tr>
