--- a/info/index.html
+++ b/info/index.html
@@ -47,12 +47,9 @@
                             </div>
                         </td>
                         <td width="300" align="right" valign="top">
-                            <a href="./info/index.html#contact">
-                                <img src="../assets/homepage/sitemap.png" width="119" height="50" alt="サイトマップ" hspace="8">
-                            </a>
 
-                            <a href="./info/index.html#contact">
-                                <img src="../assets/homepage/mail.png" width="120" height="50" alt="お問い合わせ" hspace="8">
+                            <a href="#contact">
+                                <img src="../assets/homepage/contact.png" width="200" height="100" alt="联系我们" hspace="8">
                             </a>
                         </td>
                     </tr>
@@ -131,112 +128,32 @@
 
 
         <div id="footer">
-            <center>
-                <!--<table width="800">-->
-                    <!--<tbody>-->
-                        <!--<tr>-->
-                            <!--<td>-->
-                                <!--<h2>ようこそ!-->
-                                    <!--<a href="../">アニメ制作会社エクラアニマル</a>-->
-                                <!--</h2>-->
-                                <!--<p>-->
-                                    <!--<font size="2px">-->
-                                        <!--参与制作-->
-                                    <!--</font>-->
-                                <!--</p>-->
-                            <!--</td>-->
-                        <!--</tr>-->
-                    <!--</tbody>-->
-                <!--</table>-->
-                <!--<table width="800" border="1" cellspacing="0" cellpadding="0">-->
-                    <!--<tbody>-->
-                        <!--<tr>-->
-                            <!--<th scope="col" width="200">-->
-                                <!--<p>TVシリーズのアニメ制作</p>-->
-                            <!--</th>-->
-                            <!--<th scope="col" width="200">-->
-                                <!--<p>自主制作アニメ</p>-->
-                            <!--</th>-->
-                            <!--<th scope="col" width="200">-->
-                                <!--<p>イベント協力</p>-->
-                            <!--</th>-->
-                            <!--<th scope="col" width="200">-->
-                                <!--<p>関連サイト</p>-->
-                            <!--</th>-->
-                        <!--</tr>-->
-                        <!--<tr>-->
-                            <!--<td>-->
-                                <!--<p>-->
-                                    <!--<font size="-2">-->
-                                        <!--<a href="." target="new">＋シンカリオン</a>-->
-                                        <!--<br>-->
-                                        <!--<a href="../anime/mukashibanashi/" target="new">＋ふるさとめぐり日本の昔ばなし</a>-->
-                                    <!--</font>-->
-                                <!--</p>-->
-                            <!--</td>-->
-                            <!--<td>-->
-                                <!--<p>-->
-                                    <!--<font size="-2">-->
-                                        <!--<a href="../katudou/index.html#kazenoyouni">＋風のように</a>-->
-                                        <!--<br>-->
-                                        <!--<a href="../katudou/index.html#daruma">＋だるまちゃんシリーズ</a>-->
-                                        <!--<br>-->
-                                        <!--<a href="../katudou/index.html#fuitin">＋フイチンさん</a>-->
-                                        <!--<br>-->
-                                        <!--<a href="../katudou/index.html#charadoku">＋キャラ丸くんとドク丸くん</a>-->
-                                        <!--<br>-->
-                                        <!--<a href="../katudou/index.html#kappa">＋かっぱのすりばち</a>-->
-                                        <!--<br>-->
-                                        <!--<a href="../katudou/index.html#kurumi">＋くるくるクルミちゃん</a>-->
-                                        <!--<br>-->
-                                        <!--<a href="../katudou/index.html#sakura">＋さくらとサクリン</a>-->
-                                    <!--</font>-->
-                                <!--</p>-->
-                            <!--</td>-->
-                            <!--<td>-->
-                                <!--<p>-->
-                                    <!--<font size="-2">＋人形劇フェスタin西東京-->
-                                        <!--<br> ＋子育てフェスタ＠西東京-->
-                                        <!--<br>-->
-                                        <!--<a href="" target="new">＋西東京商工祭り</a>-->
-                                        <!--<br>-->
-                                        <!--<a href="" target="new">＋西東京市民祭り</a>-->
-                                        <!--<br>-->
-                                        <!--<a href="" target="new">＋西東京アースデイフェア</a>-->
-                                    <!--</font>-->
-                                <!--</p>-->
-                            <!--</td>-->
-                            <!--<td>-->
-                                <!--<p>-->
-                                    <!--<font size="-2">-->
-                                        <!--<a href="" target="new">＋エクラアニマルネットショップ</a>-->
-                                        <!--<br>-->
-                                        <!--<a href="" target="new">＋E★アニマル日記【スタッフブログ】</a>-->
-                                        <!--<br>-->
-                                        <!--<a href="" target="new">＋キャラ丸くんとドク丸くん【Facebook】</a>-->
-                                        <!--<br>-->
-                                        <!--<a href="" target="new">＋キャラ丸くん【Twitter】</a>-->
-                                        <!--<br>-->
-                                        <!--<a href="" target="new">＋風のように【Twitter】</a>-->
-                                        <!--<br>-->
-                                        <!--<a href="" target="new">＋キャラ丸くんとドク丸くん4コマ漫画</a>-->
-                                        <!--<br>-->
-                                        <!--<a href="" target="new">＋ふらふら蟻【ラジオ番組】</a>-->
-                                    <!--</font>-->
-                                <!--</p>-->
-                            <!--</td>-->
-                        <!--</tr>-->
-                    <!--</tbody>-->
-                <!--</table>-->
-                <table width="800">
-                    <tbody>
-                        <tr> </tr>
-                    </tbody>
-                </table>
-                <span style="color:#69c;">Copyright(C)</span>
-                <a href="">版权所有</a>
-                <p></p>
-            </center>
+            <a name="footer"></a>
+      <div class="footer-content">
+        <div class="footer-row">
+          <div class="sprite-contact-cta"></div>
+          <div class="footer-tab contact-us">
+            <h3>CONTACT US</h3>
+            <p>zuozuo_0101@126.com（中国）
+                  zuozuo0101@gmail.com（日本）</p>
+            <h3>TEL</h3>
+            <p>18222177796（中国）
+                  81+09098422118（日本）</p>
+          </div>
+          <div class="footer-tab"><div style="height: 150px"></div></div>
+          <div class="footer-tab location">
+            <h3>LOCATION</h3>
+            <p>天津市自贸试验区熙元广场1-2012</p>
+            <p class="footer-map">
+              <a href="http://map.baidu.com/?newmap=1&ie=utf-8&s=s%26wd%3D%E5%A4%A9%E6%B4%A5%E5%B8%82%E8%87%AA%E8%B4%B8%E8%AF%95%E9%AA%8C%E5%8C%BA%E7%86%99%E5%85%83%E5%B9%BF%E5%9C%BA1-2012"
+                target="_blank">
+                <span class="sprite sprite-map"></span>View Map</a>
+            </p>
+            <h3>FAX</h3>
+            <p>81-0424615301（日本）</p>
+          </div>
+        </div>
+        <div id="legal">© ANIMAL - Making life more meaningful</div>
         </div>
     </div>
     <!-- #EndLibraryItem -->
