--- a/index.html
+++ b/index.html
@@ -133,6 +133,8 @@
       <ul class="rslides rslides1">
       </ul>
     </center>
+    <br>
+    <hr>
 
 
     <!-- 主体 -->
@@ -144,8 +146,17 @@
 
             <br>
             <img src="./assets/homepage/news.png" width="250" height="42" alt="news">
-            <div class="news" id="xinweng">
+            <div style="height: 150px;" class="news" id="xinweng">
             </div>
+            <iframe style="margin: 15px" frameborder="0" width="540" height="298" src="https://v.qq.com/iframe/player.html?vid=c0762s6brso&tiny=0&auto=0" allowfullscreen></iframe>
+            <br>
+            <hr>
+            <br>
+            <img width="540" src="./assets/homepage/1.jpeg" alt=""/>
+            <br>
+            <hr>
+            <br>
+            <img width="540" src="./assets/homepage/2.jpeg" alt=""/>
           </td>
 
 
@@ -153,10 +164,10 @@
 
           <td width="250" align="center" valign="top">
 
+            <iframe id="weibo" style="width:240px; height:552px;border: 1px #ccc solid;margin-top: 18px;"   frameborder="0" scrolling="no" src="http://v.t.sina.com.cn/widget/widget_blog.php?uid=3056536741"></iframe>
 
-    
             <p>
-              <iframe src="/map.html" frameBorder=0 height=340 width=240 scrolling=no></iframe>
+              <iframe style="margin-top: 15px;" src="/map.html" frameBorder=0 height=340 width=240 scrolling=no></iframe>
               <br> ▶︎
               <a href="http://map.baidu.com/?newmap=1&ie=utf-8&s=s%26wd%3D%E5%A4%A9%E6%B4%A5%E5%B8%82%E8%87%AA%E8%B4%B8%E8%AF%95%E9%AA%8C%E5%8C%BA%E7%86%99%E5%85%83%E5%B9%BF%E5%9C%BA1-2012" target="="_blank>查看地图</a>
               <br>
@@ -166,36 +177,13 @@
         </tr>
         <tr>
           <td colspan="2">
-          <div class="television">
-  <div class="television__top">
-    <div class="television__antenna television__antenna--left"></div>
-    <div class="television__antenna television__antenna--right"></div>
-    <div class="television__antenna__base"></div>
-  </div><!-- television__top -->
-  <div class="television__center">
-    <div class="television__screen">
-      <iframe src="https://v.qq.com/iframe/player.html?vid=c0762s6brso&tiny=0&auto=0" frameborder="0" allowfullscreen></iframe>
-    </div><!-- television__screen -->
-    <div class="television__channels-wrapper">
-      <ul class="television__channels">
-        <li class="television__channel"><a href="https://v.qq.com/iframe/player.html?vid=r0025ymf1mo&tiny=0&auto=0" title="频道 1"></a></li>
-        <li class="television__channel"><a href="https://v.qq.com/iframe/player.html?vid=w00202az26u&tiny=0&auto=0" title="频道 2"></a></li>
-        <li class="television__channel"><a href="https://v.qq.com/iframe/player.html?vid=f002639e6zj&tiny=0&auto=0" title="频道 3"></a></li>
-        <li class="television__channel"><a href="https://v.qq.com/iframe/player.html?vid=g0014r3khdw&tiny=0&auto=0" title="频道 4"></a></li>
-        <li class="television__channel"><a href="https://v.qq.com/iframe/player.html?vid=v0025d8nel1&tiny=0&auto=0" title="频道 5"></a></li>
-        <li class="television__channel"><a href="https://v.qq.com/iframe/player.html?vid=i0026ssfw4k&tiny=0&auto=0" title="频道 6"></a></li>
-      </ul>
-    </div><!-- television__channels-wrapper -->
-  </div><!-- television__center -->
-  <div class="television__base">
-    <div class="television__foot television__foot--left"></div>
-    <div class="television__foot television__foot--right"></div>
-  </div><!-- television__base -->
-</div>
-</td>
+          </td>
+          </td>
         </tr>
       </tbody>
     </table>
+    <br>
+    <hr>
 
     <div id="footer">
       <a name="footer"></a>
