--- a/katudou/index.html
+++ b/katudou/index.html
@@ -130,36 +130,38 @@
         <!-- コピーライト -->
 
         <!-- #BeginLibraryItem "/Library/under.lbi" -->
-        <div id="footer">
-            <a name="footer"></a>
-      <div class="footer-content">
-        <div class="footer-row">
-          <div class="sprite-contact-cta"></div>
-          <div class="footer-tab contact-us">
-            <h3>CONTACT US</h3>
-            <p>zuozuo_0101@126.com（中国）
-                  zuozuo0101@gmail.com（日本）</p>
-            <h3>TEL</h3>
-            <p>18222177796（中国）
-                  81+09098422118（日本）</p>
-          </div>
-          <div class="footer-tab"><div style="height: 150px"></div></div>
-          <div class="footer-tab location">
-            <h3>LOCATION</h3>
-            <p>天津市自贸试验区熙元广场1-2012</p>
-            <p class="footer-map">
-              <a href="http://map.baidu.com/?newmap=1&ie=utf-8&s=s%26wd%3D%E5%A4%A9%E6%B4%A5%E5%B8%82%E8%87%AA%E8%B4%B8%E8%AF%95%E9%AA%8C%E5%8C%BA%E7%86%99%E5%85%83%E5%B9%BF%E5%9C%BA1-2012"
-                target="_blank">
-                <span class="sprite sprite-map"></span>View Map</a>
-            </p>
-            <h3>FAX</h3>
-            <p>81-0424615301（日本）</p>
-          </div>
-        </div>
-        <div id="legal">© ANIMAL - Making life more meaningful</div>
-        </div>
+
     </div>
     <!-- #EndLibraryItem -->
+
+    <footer class="xj-footer123">
+      <div id="gfooter" ams="5012/5013/35018/m3482" dark="1" ieg-logo="1">
+        <div class="foot foot_dark">
+          <div class="foot_cpright">
+            <div class="foot_lefts">
+              <img class="foot_logo" width="120" src="./assets/homepage/WechatIMG355.png" alt="左瀛动漫">
+              <span class="foot_text">左瀛动漫</span>
+            </div>
+            <ul class="foot_links">
+              <li class="copyright_zh">
+                <a target="_blank" href="#">左瀛动漫设计有限公司 版权所有</a></li>
+              <li class="copyright_public">
+                <span class="span_line">电话：18222177796(中国)</span>
+                <span class="f_line">|</span>
+                <span class="span_line">81+09098422118(日本)</span>
+                <span class="f_line">|</span>
+                <a target="_blank" href="#">联系地址：天津市自贸试验区熙元广场1-2012</a></li>
+              <li class="copyright_public">
+                <span class="span_line">传真：81-0424615301(日本)</span>
+                <span class="f_line">|</span>
+                <span class="span_line">邮箱：zuozuo_0101@126.com(中国)</span>
+                <span class="f_line">|</span>
+                <a target="_blank" href="#">zuozuo0101@gmail.com(日本)</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
 
 
     <audio controls="controls" style="display: none;"></audio></body>
