--- a/saiyou/index.html
+++ b/saiyou/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>title</title>
+    <title>招聘</title>
 
     <link href="../theme/caiyong.css" rel="stylesheet" type="text/css">
     <script src="./src/jquery.min.js"></script>
@@ -84,6 +84,13 @@
                     <div style="width: 120px; height: 27px;display: inline-block;">
                         <span style="font-size: 23px;font-weight: 600;">活动</span>
                     </div>
+                </a>
+
+                <!-- tab4 -->
+                <a href="../works.html">
+                <div style="width: 118px; height: 26px;display: inline-block;">
+                    <span style="font-size: 23px;font-weight: 600;">作品简介</span>
+                </div>
                 </a>
 
                 <!-- tab4 -->
